--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+git{
   "name": "github-job-react",
   "version": "0.1.0",
   "private": true,
@@ -38,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  { "engines" : { "node" : ">=14.15.4" } }
 }
